--- a/PathOfPaper/PathOfPaper.csproj
+++ b/PathOfPaper/PathOfPaper.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\Skill\Dexterity\" />
+    <Folder Include="Data\Skill\Strength\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
 </Project>
